--- a/spring-cloud-parent/eureka-client/pom.xml
+++ b/spring-cloud-parent/eureka-client/pom.xml
@@ -3,13 +3,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<artifactId>spring-cloud-learn</artifactId>
+		<artifactId>spring-cloud-parent</artifactId>
 		<groupId>com.example</groupId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
-	<artifactId>eureka-server</artifactId>
+	<artifactId>eureka-client</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>eureka-server</name>
+	<name>eureka-client</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
@@ -20,7 +20,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
 
 		<dependency>
