--- a/springboot-base/pom.xml
+++ b/springboot-base/pom.xml
@@ -10,9 +10,9 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.springboot</groupId>
-	<artifactId>study</artifactId>
+	<artifactId>springboot-base</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>study</name>
+	<name>springboot-base</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
@@ -24,7 +24,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -93,9 +92,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
-
 	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
@@ -104,5 +101,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
