--- a/java-maven-base/pom.xml
+++ b/java-maven-base/pom.xml
@@ -33,5 +33,22 @@
 			<artifactId>mongo-java-driver</artifactId>
 			<version>3.10.0</version>
 		</dependency>
+		<!--Jackson required包-->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.12.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.12.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>2.12.1</version>
+		</dependency>
+
 	</dependencies>
 </project>
