--- a/spring-study/pom.xml
+++ b/spring-study/pom.xml
@@ -5,8 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example</groupId>
-    <artifactId>spring-base</artifactId>
+    <artifactId>spring-study</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>spring-base</module>
+        <module>spring-proxy</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
